--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@capacitor/keyboard": "7.0.1",
     "@capacitor/status-bar": "7.0.1",
     "@ionic/angular": "^8.0.0",
-    "ionicons": "^7.0.0",
+    "bootstrap-icons": "^1.13.1",
+    "firebase": "^11.7.1",
+    "ionicons": "^7.4.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
